# spytial-rust

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  USER_GUIDE.md  doc.md
.github/workflows/: main.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  decorators.md  getting-started.md  headless.md  introduction.md  library.md
examples/: dbg_basic.rs  demo.rs  enum_singleton_test.rs  enum_test.rs  rbt.rs  singleton_test.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: export.rs  jsondata.rs  lib.rs  reify.rs
src/spytial_annotations/: runtime.rs
tests/: dbg_e2e.rs  decorators.rs  edge_cases_probe.rs  export.rs  reify.rs
