[package]
name = "spytial"
version = "0.1.0"
edition = "2021"
authors = ["Siddhartha Prasad <siddhartha.a.prasad@gmail.com>"]
rust-version = "1.80"
description = "Drop-in replacement for std::dbg! that opens an interactive diagram of Rust values (Spytial for Rust)."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sidprasad/spytial-rust"
documentation = "https://docs.rs/spytial"
homepage = "https://github.com/sidprasad/spytial-rust"
keywords = ["spytial", "visualization", "diagram", "debugging", "graph"]
categories = ["visualization", "development-tools"]
exclude = ["target/", "Dockerfile", "docker-entrypoint.sh", ".github/", "docs/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
serde-value = "0.7"
spytial_export_macros = { version = "0.1.0", path = "./macros" }

[dev-dependencies]
